add ClientsController index and create. Changed api lib to axios. Swagger OK
